<resources>
    <string name="app_name">ADiFy</string>

    <!-- company information -->

    <string name="company_heading">We Convert Dream Into Apps</string>
    <string name="company_phone_number">+91 80 50 16 8818</string>
    <string name="company_email_id">imadianand@gmail.com</string>
    <string name="company_address">Bangalore, Karnataka, India, 560037</string>
    <string name="timing">10:00am - 10:00pm</string>

    <!-- Image description -->

    <string name="logo_description">Adify logo</string>
    <string name="company_wallpaper">Company wallpaper</string>

</resources>
